# stigma_iii

./: README.md  pyproject.toml
stigma_iii/: bleed.py  hadok_gluth.py  neura.py  nn_kw.json  recurrent.py  tests.py  translator.py
stigma_iii/hub/: notes.py
stigma_iii/hub/CS1/: blade_runner.py
stigma_iii/hub/CS1/data/: spice_harvester.py
stigma_iii/hub/CS2/: blade_runner.py
stigma_iii/hub/CS2/data/: spice_harvester.py
stigma_iii/hub/CS3/: blade_runner.py
stigma_iii/hub/CS3/data/: spice_harvester.py
stigma_iii/hub/CS4/: blade_runner.py
stigma_iii/hub/CS4/data/: spice_harvester.py
stigma_iii/hub/CS5/: blade_runner.py
stigma_iii/hub/CS5/data/: spice_harvester.py
stigma_iii/hub/CS6/: blade_runner.py
stigma_iii/hub/CS6/data/: spice_harvester.py
stigma_iii/hub/CS7/: blade_runner.py
stigma_iii/hub/CS7/data/: spice_harvester.py
stigma_iii/hub/CS8/: blade_runner.py
stigma_iii/hub/CS8/data/: spice_harvester.py
stigma_iii/hub/TS1/: blade_runner.py
stigma_iii/hub/TS1/data/: spice_harvester.py
stigma_iii/hub/TS2/: blade_runner.py
stigma_iii/hub/TS2/data/: spice_harvester.py
stigma_iii/hub/TS3/: blade_runner.py
stigma_iii/hub/TS3/data/: spice_harvester.py
stigma_iii/hub/TS4/: blade_runner.py
stigma_iii/hub/TS4/data/: spice_harvester.py
stigma_iii/hub/TS5/: blade_runner.py
stigma_iii/hub/TS5/data/: spice_harvester.py
stigma_iii/hub/TS6/: blade_runner.py
stigma_iii/hub/TS6/data/: spice_harvester.py
stigma_iii/hub/TS7/: blade_runner.py
stigma_iii/hub/TS7/data/: spice_harvester.py
stigma_iii/hub/TS8/: blade_runner.py
(+1 files in other folders)
