[tool.poetry]
name = "stigma_iii"
version = "0.0.1"
description = "Base NN examination: II"
authors = [
  "edazizovv",
]
license = "MIT"
readme = "README.md"
packages = [{include = "stigma_iii"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"